--- a/styles.css
+++ b/styles.css
@@ -124,3 +124,29 @@ background-color: #EED9C4
     gap: 2rem;
     
 }
+
+.menu li{
+    list-style: none;   
+}
+
+.menu a{
+    text-decoration: none;
+    font-size: 1.3rem;
+    color: var(--dark-color);
+    font-weight: 600;
+    text-transform: uppercase;
+    position: relative;
+}
+
+.menu a::after{
+    content: '';
+    width: 1.5rem;
+    height: 1px;
+    background-color: #fff;
+    position: absolute;
+    bottom: -3px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+
+}
