--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+
+
 .handlee-regular {
   font-family: "Handlee", cursive;
   font-weight: 400;
@@ -118,6 +120,8 @@ background-color: #EED9C4
     font-family: system-ui;
 
 }
+
+
 .container-navbar{
     background-color: var(--primary-color);
 
@@ -145,6 +149,7 @@ background-color: #EED9C4
     max-width: none;
 
 }
+
 
 .container-navbar{
     width: 350px;
@@ -206,7 +211,7 @@ input{
 }
 
 .fa-brands{
-    position: fixed;
+    position: absolute;
     margin-left: -10px;
     margin-top: 2px;
 
@@ -217,8 +222,22 @@ input{
     display: block;
     width: 100%;
     height: 350px;
-    background-image: url('./images/imgbanner.jpg');
+    background-image: url('./images/imagebanner1.jpg');
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
+    margin-left: -20px;
+    
+
+    
+
 }
+
+.banner{ 
+    transition: transform 0.5s;
+}
+
+.banner:hover {
+    transform: scale(1.2);
+    
+}
+
