--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,9 @@ background-color: #EED9C4
     color: #515455;
     font-family: system-ui;
     font-size: xx-small;
+    font-weight: 700;
     text-transform: uppercase;
+
     
 
 }
@@ -115,7 +117,7 @@ background-color: #EED9C4
     border-radius: 5px;
     cursor: pointer;
     font-weight: bold;
-    color: white;
+    color: #d8538a;
     margin-left: 1rem;
     font-family: system-ui;
 
@@ -226,6 +228,7 @@ input{
     background-size: cover;
     background-position: center;
     margin-left: -20px;
+    transition: transform 0.5s;
     
 
     
