--- a/styles.css
+++ b/styles.css
@@ -271,6 +271,88 @@ section {
 
 
 .main-content{
-    background-color: #ffc5d3
+    background-color: #bffdc8a6;
+    min-height: 700px; 
+   
 
+}
+
+.container-features{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 3rem 0;
+    padding: 3 rem 0;
+
+}
+
+.best-brands{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin-bottom: 3rem;
+}
+
+.container-brands{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.card-category{
+    height: 20rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 2rem;
+    gap: 2rem;
+}
+
+.category-serums{
+    background-image: linear-gradient(#00000080, #00000080 ), url('https://i.imgur.com/pA5w7Cx.png');
+    background-size: cover;
+    background-position: bottom;
+    background-repeat: no-repeat;
+}
+
+.category-hidratantes{
+   background-image: linear-gradient(#00000080, #00000080 ), url('https://i.imgur.com/Cmj0cl5.jpeg');
+    background-size: cover;
+    background-position: bottom;
+    background-repeat: no-repeat;
+}
+
+.category-solares{
+    background-image: linear-gradient(#00000080, #00000080 ), url('https://i.imgur.com/kLnOlQ4.jpeg');
+    background-size: cover;
+    background-position: bottom;
+    background-repeat: no-repeat;
+
+}
+
+.card-category p{
+    font-size: 2.5rem;
+    font-family: serif;
+    color: white; 
+    text-transform: capitalize;
+    position: relative;
+    margin-top: 21px;
+}
+
+.card-category span{
+    font-size: 1.4rem;
+    font-family: serif;
+    color: #fff;
+    background-color: #b9176344; 
+    border: 2px solid #ffffffa1;
+    border-radius: 1rem;
+    padding: 0.6rem 1.2rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    display: inline-block;
+    margin-top: 1rem;
+    
+    
+}
+
+.card-category span:hover{
+    color: var(--primary-color);
 }
