--- a/styles.css
+++ b/styles.css
@@ -27,9 +27,9 @@ html{
 .container{
     max-width: 120rem;
     margin: 0 auto;
-    position: absolute;
-    left: 0;
-    right: 0;
+    padding-left: 20px;
+    padding-right: 20px;
+    position: relative;
 }
 
 .container-hero{ 
@@ -356,3 +356,12 @@ section {
 .card-category span:hover{
     color: var(--primary-color);
 }
+
+.heading-1 {
+    font-size: 2.5rem;
+    text-align: left;
+    margin-bottom: 2rem;
+    color: #b91763;
+}
+
+
