--- a/styles.css
+++ b/styles.css
@@ -272,7 +272,7 @@ section {
 
 .main-content{
     background-color: #bffdc8a6;
-    min-height: 700px; 
+    min-height: 1000px; 
    
 
 }
@@ -358,9 +358,12 @@ section {
 }
 
 .heading-1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
+    font-family: segoe script;
+    font-weight: 500;
     text-align: left;
-    margin-bottom: 2rem;
+    margin-top: 1.7rem;
+    margin-bottom: 0.5rem;
     color: #b91763;
 }
 
