--- a/styles.css
+++ b/styles.css
@@ -273,7 +273,7 @@ section {
 
 .main-content{
     background-color: #bffdc8a6;
-    background: linear-gradient(to left, #ffc5d3 30%, #7ed37f 70%);
+    background: linear-gradient(to left, #ffc5d3 30%, #9bfab0 70%);
     min-height: 1000px; 
    
 
@@ -497,4 +497,4 @@ background-color: #EED9C4
     gap: 2rem;
     
 }
->>>>>>> 9ce87027d45f75fa5ee2cac1a60465c13061093d
+
