--- a/styles.css
+++ b/styles.css
@@ -231,7 +231,7 @@ input{
 
 .banner {
     display: block;
-    width: 100%;
+    width: 100vw;
     height: fit-content;
     background-image: url('./images/imagebanner1.jpg');
     background-size: cover;
@@ -248,7 +248,7 @@ input{
 }
 
 .content-banner img{
-    width: 100%;
+    width: 100vw;
     height: 500px;
     object-fit: cover;
 
@@ -279,13 +279,64 @@ section {
 
 }
 
+.container-category {
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
 .container-features{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 3rem 0;
-    padding: 3 rem 0;
+    gap: 2rem 0;
+    padding: 3rem 0;
 
 }
+
+.container-options span{
+    margin-left: -1rem;
+    font-family: serif;
+    font-size: 1.7rem;
+    color: #b91763;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    cursor: pointer;
+    padding: 0.5rem 1rem;
+    transition: all 0.3s ease;
+}
+
+.container-options span:hover {
+    background-color: #ffd2e1;
+    border-radius: 1rem;
+}
+
+.more {
+    display: block;
+    margin-left: 10.5rem;
+    margin-right: 0rem;
+    margin-top: 2rem;
+    font-family: "Handlee", cursive;
+    font-size: 1.6rem;
+    font-weight: bold;
+    color: #b91763;
+    background-color: transparent;
+    padding: 0.5rem 1.2rem;
+    border: 2px solid #b91763;
+    border-radius: 1rem;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    width: fit-content;
+}
+
+
+.more:hover {
+    background-color: #ffd2e1; 
+    color: white;
+    border-color: #ffd2e1;
+}
+
 
 .best-brands{
     display: flex;
@@ -302,6 +353,7 @@ section {
 .card-category{
     height: 20rem;
     display: flex;
+    width: 300px;
     align-items: center;
     justify-content: center;
     border-radius: 2rem;
@@ -331,7 +383,7 @@ section {
 }
 
 .card-category p{
-    font-size: 2.5rem;
+    font-size: 1.9rem;
     font-family: serif;
     color: white; 
     text-transform: capitalize;
