--- a/styles.css
+++ b/styles.css
@@ -322,7 +322,7 @@ section {
     color: #b91763;
     background-color: transparent;
     padding: 0.5rem 1.2rem;
-    border: 2px solid #b91763;
+    border: 2px solid #d8538ac5;
     border-radius: 1rem;
     text-transform: uppercase;
     cursor: pointer;
