--- a/styles.css
+++ b/styles.css
@@ -316,7 +316,7 @@ section {
     margin-left: 10.5rem;
     margin-right: 0rem;
     margin-top: 2rem;
-    font-family: "Handlee", cursive;
+    font-family: serif;
     font-size: 1.6rem;
     font-weight: bold;
     color: #b91763;
@@ -381,6 +381,8 @@ section {
     background-repeat: no-repeat;
 
 }
+
+
 
 .card-category p{
     font-size: 1.9rem;
@@ -493,7 +495,6 @@ background-color: #EED9C4
 
 .container-logo h1 a{
     text-decoration: none;
-    color: #000;
     font-size: 3rem;
     text-transform: uppercase;
     letter-spacing: -1px;
@@ -517,7 +518,6 @@ background-color: #EED9C4
 
 .container-user .fa-basket-shopping{
     font-size: 3rem;
-    color: var(--dark-color);
     padding-left: 1rem;
 }
 
@@ -526,9 +526,51 @@ background-color: #EED9C4
     flex-direction: column;
 }
 
+.card-category {
+    position: relative;
+  }
+  
+  .icono.heart,
+  .icono.basket {
+    position: absolute;
+    top: 1rem;
+    font-size: 1.5rem;
+  }
+  
+  .icono.heart {
+    right: 3.5rem;
+  }
+  
+  .icono.basket {
+    right: 1rem;
+    
+  }
+
+  .icono.heart {
+    font-size: 2rem;
+    color: #b91763;
+    cursor: pointer;
+    transition: transform 0.3s ease, color 0.3s ease;
+  }
+  
+  .icono.heart:hover {
+    transform: scale(1.3);
+  }
+  
+  .icono.basket {
+    font-size: 2rem;
+    color: #550000;
+    cursor: pointer;
+    transition: transform 0.3s ease, color 0.3s ease;
+  }
+  
+  .icono.basket:hover {
+    transform: rotate(-10deg) scale(1.2);
+  }
+  
+
 .container-navbar{
     background-color: var(--primary-color);
-
 }
 
 .navbar{
