--- a/styles.css
+++ b/styles.css
@@ -413,11 +413,13 @@ section {
     gap: 2rem;
 }
 
+
 .category-serums{
     background-image: linear-gradient(#00000080, #00000080 ), url('https://i.imgur.com/pA5w7Cx.png');
     background-size: cover;
     background-position: bottom;
     background-repeat: no-repeat;
+    margin-left: 1rem
 }
 
 .category-hidratantes{
@@ -425,6 +427,7 @@ section {
     background-size: cover;
     background-position: bottom;
     background-repeat: no-repeat;
+    
 }
 
 .category-solares{
@@ -432,6 +435,7 @@ section {
     background-size: cover;
     background-position: bottom;
     background-repeat: no-repeat;
+    margin-left: -0.7rem;
 
 }
 
