--- a/styles.css
+++ b/styles.css
@@ -326,7 +326,7 @@ section {
 
 .main-content{
     background-color: #bffdc8a6;
-    background: linear-gradient(to left, #ffc5d3 30%, #9bfab0 70%);
+    background: linear-gradient(to left, #ffcfda 30%, #9bfab0 70%);
     min-height: 1000px; 
    
 
