--- a/styles.css
+++ b/styles.css
@@ -299,9 +299,9 @@ input{
 }
 
 .content-banner img{
-    width: 100vw;
+    width: 100%;
     height: 500px;
-    object-fit: cover;
+    object-fit: contain;
     background-size: contain;
 
 }
@@ -316,7 +316,6 @@ input{
     line-height: 1.2rem;
     
 }
-
 
 
 section {
